Dando continuidade ao projeto. Pequenas modificações

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="footer laranja_claro">
+<mat-toolbar class="footer footer_cor">
     <span class="material-icons" id="icone">verified</span>
     <p class="p">
     Produzido por
