--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header mat-elevation-z4">
+<mat-toolbar class="header mat-elevation-z4 header_cor">
     <span>
         <a>
             <img class="logo" src="assets\img\B.png" alt="Logo">
