--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -1,1 +1,30 @@
-<p>nav works!</p>
+<!-- <p>nav works!</p> -->
+<mat-sidenav-container class="container">   
+    
+    <mat-sidenav class="sidenav" mode="side" opened 
+    fixedInViewport="true" fixedTopGap="64" fixedBottomGap="64">
+    <mat-nav-list class="nav-list">
+        <!-- <a> para que os itens de menu fiquem linkáveis -->
+        <a class="mat-list-item">
+                <i class="material-icons">
+                home
+                </i>
+                Home
+            </a>
+
+            <a class="mat-list-item">
+                <i class="material-icons">
+                sticky_note_2
+                </i>
+                Currúlo
+            </a>
+
+            <a class="mat-list-item">
+                <i class="material-icons">
+                message
+                </i>
+                Contato
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+</mat-sidenav-container>
